L19/hw2/style.css
.block {
  width: 200px;
  height: 100px;
  border-radius: 10px;
  background-color: coral;
  margin: 0 auto;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14px;
  font-weight: 700;
  color: #fff;
  text-transform: uppercase;
  line-height: 100px;
  text-align: center;
  position: absolute;
  left: calc(50vw - 100px);
  animation: down 2s;
  animation-fill-mode: forwards;
}

@keyframes down {
  from {
    top: -100px
  }
  to {
    top: calc(50vh - 50px);
  }
}

